[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scene/Start/StartScene.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu/menu.png" type="Texture" id=2]

[node name="StartScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1025.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 436.0
margin_top = 439.0
margin_right = 563.0
margin_bottom = 507.0

[node name="Start" type="TextureButton" parent="MainMenu"]
margin_right = 127.0

[node name="Option" type="TextureButton" parent="MainMenu"]
margin_top = 4.0
margin_right = 127.0
margin_bottom = 4.0

[node name="Quit" type="TextureButton" parent="MainMenu"]
margin_top = 8.0
margin_right = 127.0
margin_bottom = 8.0

[node name="SettingsMenu" type="Popup" parent="."]
visible = true
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu"]
margin_right = 40.0
margin_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="MainMenu/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MainMenu/Option" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="MainMenu/Quit" to="." method="_on_Quit_pressed"]
